2010-08-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoFontEnumerator.m,
	* Source/xlib/GSXftFontInfo.m: Also request spacing information.
	Patch by Derek Fawcus <dfawcus@employees.org>.

2010-08-03  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m:
	Only look at NSUtilityWindowMask to decide whether to use a thin-
	style title bar (WS_EX_TOOLWINDOW).

2010-07-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSGState.m (-fillRect:withPattern:): Don't use an
	autoreleased bezier path.
	* Source/art/path.m (-DPSrectfill::::),
	* Source/xlib/XGGState.m (-DPSrectfill::::): Use
	-fillPath:withPattern: not -fillRect:withPattern: as the rect needs
	to be converted first.

2010-07-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m,
	* Source/x11/XGServerEvent.m: Use NSDeleteCharacter instead of
	NSBackSpaceCharacter for the backspace key. This is what Cocoa and
	OpenStep have been doing all the time.
	Also use NSBackTabCharacter on X11 when XK_ISO_Left_Tab is
	pressed, but don't convert shift-tab into NSBackTabCharacter.
	Patch by Derek Fawcus <dfawcus@employees.org>.

2010-07-25  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m:
	Fix accidental integer division intended to be float division when
	setting the timestamp on events. This was causing all timestamps
	to be rounded to the nearest second.

2010-07-25  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/w32_GLContext.m:
	* Source/x11/XGGLContext.m:
	Apply fix for bug 29705: OpenGL subwindow positioning error
	(OpenGL subwindow position was incorrectly calculated when
	the window content view was flipped)

2010-07-25 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerEvent.m:
	Treat Shift modifiers in the same manner as other modifiers.
	This fixes the value of the shift bit (NSShiftKeyMask) in
	the modifierFlags passed to a -flagsChanged: method call.
	Without it the shift bit is inverted, as explained in